# bond

./: .gitignore  README.md  main.py  pyproject.toml
bond/: __init__.py  agent.py  cli.py  config.py  prompts.py  run.py  version_check.py
bond/agent/: agent.py  cli.py  run.py
bond/functions/impl/: bash.py  edit.py  view.py  web_fetch.py  web_search.py
bond/impl_func/: bash.py  edit.py  view.py  web_fetch.py  web_search.py
bond/impl_llm/gemini/: llm.py
bond/impl_llm/oai/: gpt.py
bond/lib/agent/: main.py
bond/lib/functions/: interface.py  web_search.py
bond/lib/functions/impl/: edit.py  proc.py  view.py  web_fetch.py  web_search.py
bond/lib/llm/: interface.py
bond/lib/llm/impl/: gemini_oai.py  oai.py  oai_old.py  openai.py  openai_old.py
bond/lib/prompts/: functions.py  initial.py  prompt.py
bond/llm/: interface.py
bond/llm/impl/gemini/: oai.py
bond/llm/impl/oai/: oai.py  oai_old.py
bond/ui/cli/: simple.py
